# stocks

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO.md  deploy.env  docker-compose-test.yml
config/: development.toml  test.env  testing.toml
docker/: Dockerfile  entrypoint.sh
examples/: add_currency.json  list_currencies.json
features/: example.feature
src/: client.rs  init.rs  lib.rs  main.rs  server.rs  settings.rs  utils.rs
src/api/: error.rs  gql.rs  imp.rs  mod.rs  model.rs  utils.rs
src/db/: error.rs  model.rs  pg.rs
src/state/: mod.rs  state.rs
tests/: cucumber.rs  currency.rs
