[package]
name = "stocks"
version = "0.4.1"
authors = ["crocme10 <matt@area403.org>"]
edition = "2018"
description = "GraphQL API for documents database"
license = "AGPLv3"
readme = "README.md"
repository = "https://github.com/crome10/journal.git"
keywords = [ "graphql", "document" ]
categories = [ "application" ]

[dependencies]
async-trait = "0.1.36"
chrono = { version = "0.4", features = [ "serde" ] }
clap = "2.33.1"
config = "0.10"
futures = { version = "0.3" }
juniper = { version = "0.15.3", features = ["chrono"] }
juniper_graphql_ws = { version = "0.2.3" }
juniper_warp = { version = "0.6.2", features = ["subscriptions"] }
reqwest = { version = "0.10.7", features = [ "blocking" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
# slog = "2.5"
# slog-term = "2.5"
# slog-async = "2.5"
snafu = { version = "0.6", features = [ "futures" ] }
sqlx = { version = "0.4.2", default-features = false, features = [ "postgres", "runtime-tokio-native-tls", "macros", "chrono", "uuid" ] }
# tokio = { version = "0.2.22", features = [ "sync", "rt-core", "macros", "stream", "process" ] }
tokio = { version = "1", features = [ "sync", "rt-multi-thread", "macros", "process" ] }
tracing = "0.1.21"
tracing-appender = "0.1.1"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
tracing-bunyan-formatter = "0.1.6"
tracing-log = "0.1.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
url = "2.1"
warp = { version = "0.2.5" }

[lib]
name = "stocks"
path = "src/lib.rs"

[[bin]]
name = "service"
path = "src/main.rs"
