[package]
name = "stocks"
version = "0.4.1"
authors = ["crocme10 <matt@area403.org>"]
edition = "2018"
description = "GraphQL API for documents database"
license = "AGPLv3"
readme = "README.md"
repository = "https://github.com/crome10/journal.git"
keywords = [ "graphql", "document" ]
categories = [ "application" ]

[dependencies]
async-graphql = { version = "2.5.4", features = [ "uuid", "chrono", "tracing" ] }
async-graphql-warp = "2.5.4"
async-trait = "0.1.36"
chrono = { version = "0.4", features = [ "serde" ] }
clap = "2.33.1"
config = "0.10"
futures = { version = "0.3" }
http = "0.2"
mockall = "0.8.3"
reqwest = { version = "0.11.1", features = [ "blocking" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
snafu = { version = "0.6", features = [ "futures" ] }
sqlx = { version = "0.5.1", default-features = false, features = [ "postgres", "runtime-tokio-native-tls", "macros", "chrono", "uuid" ] }
tokio = { version = "1", features = [ "sync", "rt-multi-thread", "macros", "process" ] }
tracing = "0.1.21"
tracing-appender = "0.1.1"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
tracing-bunyan-formatter = "0.1.6"
tracing-log = "0.1.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
url = "2.1"
warp = { version = "0.3.0" }

[lib]
name = "stocks"
path = "src/lib.rs"

[[bin]]
name = "service"
path = "src/main.rs"
