[package]
name = "stocks"
version = "0.2.0-rc0"
authors = ["crocme10 <matt@area403.org>"]
edition = "2018"
description = "GraphQL API for documents database"
license = "AGPLv3"
readme = "README.md"
repository = "https://github.com/crome10/journal.git"
keywords = [ "graphql", "document" ]
categories = [ "application" ]

[dependencies]
async-graphql = { version = "2.5.7", features = [ "uuid", "chrono", "tracing" ] }
async-graphql-warp = "2.5.7"
async-trait = "0.1.36"
chrono = { version = "0.4", features = [ "serde" ] }
clap = "2.33.1"
config = "0.10"
futures = { version = "0.3.13" }
http = "0.2"
mockall = "0.8.3"
reqwest = { version = "0.11.1", features = [ "blocking" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
snafu = { version = "0.6", features = [ "futures" ] }
sqlx = { version = "0.5.1", default-features = false, features = [ "postgres", "runtime-tokio-native-tls", "macros", "chrono", "uuid" ] }
tokio = { version = "1", features = [ "sync", "rt-multi-thread", "macros", "process" ] }
tracing = "0.1.25"
tracing-appender = "0.1.2"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.16"
tracing-bunyan-formatter = "0.1.7"
tracing-log = "0.1.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
url = "2.1"
warp = { version = "0.3.0" }

[lib]
name = "stocks"
path = "src/lib.rs"

[[bin]]
name = "service"
path = "src/main.rs"

[[test]]
name = "currency"
harness = false # Allows Cucumber to print output instead of libtest

[dev-dependencies]
cucumber = { package = "cucumber_rust", version = "0.8.3" }
# You can use any executor you want, but we're going to use Tokio in this example.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
